--- a/amok.css
+++ b/amok.css
@@ -1,6 +1,9 @@
-
-#posts{
-  column-count: 3;
-  column-gap: 40px;
-  column-rule: 4px double #ff00ff;
-}
+  #posts{
+    column-count: 3;
+    column-gap: 40px;
+    column-rule: 4px double #ff00ff;
+    background-position: left;
+    paint-order: 10px;
+    padding: 10px;
+    margin: 1px;
+  }
